# spr

./: README.md  example.py  pyproject.toml
spr/: __init__.py  _pbar.py  _slack.py  spr.py
tests/: test_spr.py
